data/derived/comb/progs/unify/prog4574.ml.out
Characters 54-79:
  else  n=sumList (digitsOfInt n) in 
        ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type bool but an expression was expected of type
         int
